--- a/css/admin_css/electionConfig.css
+++ b/css/admin_css/electionConfig.css
@@ -1,27 +1,3 @@
-body {
-    font-size: 19px;
-}
-
-table {
-    width: 50%;
-    margin: 30px auto;
-    border-collapse: collapse;
-    text-align: left;
-}
-
-tr {
-    border-bottom: 1px solid #cbcbcb;
-}
-
-th, td {
-    border: none;
-    height: 30px;
-    padding: 2px;
-}
-
-tr:hover {
-    background: #F5F5F5;
-}
 
 form {
     width: 40%;
@@ -33,7 +9,7 @@ form {
     background-color: #124254;
     margin-right: 75px;
     margin-top: 20px;
-    margin-bottom: auto;
+    margin-bottom: 60px;
 }
 
 input[type="date"] {
@@ -91,7 +67,7 @@ input[type="time"] {
     text-align: center;
 }
 
-form.isog {
+.isog {
     color: #333;
     background-color: transparent;
     float: left;
@@ -99,7 +75,7 @@ form.isog {
     margin-left: 100px;
     margin: 25px 70px 80px;
     position: relative;
-    width: 500px;
+    width: 560px;
     border: transparent;
 }
 
@@ -122,3 +98,23 @@ label {
 input, label {
     margin: .4rem 0;
 }
+
+textarea {
+    resize: none;
+  }
+
+
+@media (max-width: 968px) {
+    form, .btn, textarea, input{
+     width: 100%;
+     
+    }
+    form{
+        margin-top: 550px;
+    }
+    
+    .isog{
+        margin-left: 28px;
+    }
+
+  }
