--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -94,7 +94,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255) !important;
   line-height: 70px;
   text-decoration: none;
   font-size: 1.2em;
@@ -103,26 +103,35 @@ nav ul li a {
   font-family: Roboto Light, sans-serif;
 }
 
-nav ul li a:visited {
-  color: #ffffff;
+nav ul li a:visited, nav ul li a:link{
   text-decoration: none;
+  border: 0;
+  outline: none;
+  box-shadow: none !important;
 }
 
 nav ul li a:hover {
   color: #ffc423;
   text-decoration: none;
+  outline: none;
 }
 
 nav ul li a:active {
   text-decoration: none;
+  color: rgb(255, 255, 255);
+  box-shadow: none;
 }
 
 nav ul li:hover {
   background-color: #124254;
 }
 
-nav ul li a:active {
-  color: green;
+:link:focus, :visited:focus {
+  outline: none !important;
+}
+
+.isDisabled{
+  pointer-events: none;
 }
 
 nav ul ul {
@@ -146,6 +155,7 @@ nav ul ul li {
 
 nav ul ul li a {
   line-height: 50px;
+  color:#000000 !important;
 }
 
 nav ul ul li .logout::before {
@@ -356,79 +366,3 @@ div p.footer-txt {
   font-size: 10px;
   color: #ffffff;
 }
-
-/* nav img.user-profile{
-    margin-top: 0;
-    height: 40px;
-    width: 40px;
-  }
-   */
-
-/*Datatable*/
-
-/* div.container {
-    background-color:#dddddd;
-    padding: 1rem;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    border: 2px solid #124254;
-    width: 100% !important;
-    height: auto;
-    opacity: 80%;
-    font-size: .8rem;
-  }
-  #ADdataTable {
-    border-collapse: collapse !important;
-    table-layout: auto;
-    margin: 0px;
-    text-align: center;
-    opacity: 100%;
-    width: 100% !important;
-  }
-  thead {
-    width: 100%;
-    color: #EEEEEE;
-    background-color: #18566e;
-    text-align: center;
-    opacity: 100%;
-  }
-  thead input {
-    width: 100%;
-  }
-  th {
-    color: #ffffff;
-    background-color: #18566e;
-    text-align: center;
-    font-size: .8rem;
-    font-family: Roboto regular, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px; 
-    border: 1px solid #124254 !important;
-  }
-  td {
-      border: 1px solid #124254;
-      padding: 0px;
-      max-width: 150px;
-      max-height: 150px;
-      overflow: hidden;
-      font-size: .8rem;
-  }
-  #ADheader{
-    position: relative;
-    z-index: -1;
-    padding: 6px;
-    background: #124254;
-    color: #ffffff;
-    width: 100%;
-    text-align: center;
-    font-family: Roboto Regular, sans-serif;
-    letter-spacing: 6px;
-  }
-  h2.aHeader-txt{
-    font-size: 24px;
-    margin-top: .5%;
-    margin-bottom: .5%;
-  }
-  .row{
-    margin: 0;
-  } */
