--- a/css/style_Login.css
+++ b/css/style_Login.css
@@ -2,12 +2,14 @@
   margin: 0;
   padding: 0;
 }
-
 body {
   font-family: Roboto, Roboto Condensed, Generica, sans-serif;
   background-image: url("../img/sample.png");
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
 }
 
 img {
@@ -56,7 +58,7 @@ p {
   border-radius: 5px;
   padding: 25px;
   background-color: #eceff1;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .19), 0 6px 6px rgba(0, 0, 0, .23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .19);
   text-align: center;
   float: left;
   position: relative;
@@ -127,30 +129,30 @@ select {
 
 /* Mobile CSS */
 
-@media all and (max-width: 986px) {
+@media all and (max-width: 986px){
   .Awelcome-banner {
     display: none;
   }
-  form {
+  /* form {
     position: fixed;
     top: 80px;
+    bottom: 80px;
     margin-left: -140px;
     margin-right: 30px;
-  }
-  /*.Acontainer{
-    position: fixed; /* or absolute 
+  } */
+  .Acontainer{
+    position: relative; /* or absolute */
+    display: inline-block;
+    float: none;
     max-width: 100%;
-    top: 50%;
-    left: 50%;
-     transform: translate(-50%, -50%);
-  }*/
+    margin: 25px 10px 0 10px;
+  }
   .Alogo-banner {
-    display: block;
+    display: inline-block;
     font-size: 1em;
-    position: absolute;
+    position: relative;
     text-align: center;
-    top: 2%;
-    left: 15%;
+    top: 50;
   }
   .Arlogo {
     display: inline-block;
