--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -1,13 +1,52 @@
-/* *{
-    margin: 0;
-    padding: 0;
-    user-select: none;
-    box-sizing: border-box;
-    font-family: Roboto,Roboto Condensed,Generica, sans-serif;
-    list-style: none;  
+@font-face {
+  font-family: 'Roboto-regular';
+  src: url('../../other/fonts/Roboto-Regular.eot');
+  src: local('Roboto Regular'), url('../../other/fonts/Roboto-Regular.ttf'), format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto-light';
+  src: url('../../other/fonts/Roboto-Light.eot');
+  src: local('Roboto Light'), url('../../other/fonts/Roboto-Light.ttf'), format('truetype');
+  font-weight: lighter;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto-bold';
+  src: url('../../other/fonts/Roboto-Bold.eot');
+  src: local('Roboto Bold'), url('../../other/fonts/Roboto-Bold.ttf'), format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'genericaregular';
+  src: url('../../other/fonts/generica-webfont.woff2') format('woff2'),
+         url('../../other/fonts/generica-webfont.woff') format('woff'),
+         url('../../other/fonts/Generica.eot') format('eot');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'genericabold';
+  src: url('../../other/fonts/generica-bold-webfont.woff2') format('woff2'),
+       url('../../other/fonts/generica-bold-webfont.woff') format('woff'),
+       url('../../other/fonts/Generica.eot') format('eot');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+
+*{
+    font-family: Roboto,Roboto Condensed,Generica, Generica Regular, sans-serif; 
   } 
   
-  body{  
+  /* body{  
     font-family: Roboto,Roboto Thin,Generica, sans-serif;
     background-image: url('../../img/adminBG.png');
     background-size: cover;
@@ -33,7 +72,7 @@ nav:after {
 
 h2.aLogo-txt1 {
   margin-top: 3px;
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   font-weight: inherit;
   font-size: 100%;
   margin-bottom: 0px;
@@ -54,12 +93,12 @@ h3.aLogo-txt2 {
   font-size: 100%;
   margin-bottom: 0px;
   letter-spacing: 6px;
-  font-family: Generica regular, sans-serif;
 }
 
 h3.aLogo-txt2 a {
   text-decoration: none;
   color: #ffffff;
+  font-family: 'genericaregular', sans-serif;
 }
 
 div.aLogo {
@@ -100,7 +139,7 @@ nav ul li a {
   font-size: 1.2em;
   padding: 8px 15px;
   letter-spacing: 1px;
-  font-family: Roboto Light, sans-serif;
+  font-family: 'Roboto-light', sans-serif;
 }
 
 nav ul li a:visited, nav ul li a:link{
@@ -230,7 +269,7 @@ nav ul ul ul li {
   left: 150px;
 }
 
-.Ashow, .Ashow2, .Ashow3, .ADicon, input {
+.Ashow, .Ashow2, .ADicon, input {
   display: none
 }
 
@@ -260,9 +299,6 @@ nav ul ul ul li {
   .Ashow2+a, ul {
     display: none;
   }
-  .Ashow3+a, ul {
-    display: none;
-  }
   nav ul li, nav ul ul li, nav ul ul ul li{
     width: 100%;
   }
@@ -279,15 +315,6 @@ nav ul ul ul li {
     margin-bottom: 0;
   }
   .Ashow2 {
-    display: block !important;
-    color: #000000 !important;
-    font-size: 1.2em;
-    padding: 0;
-    line-height: 50px;
-    cursor: pointer;
-    margin-bottom: 0;
-  }
-  .Ashow3 {
     display: block !important;
     color: #000000 !important;
     font-size: 1.2em;
@@ -371,7 +398,7 @@ div p.footer-txt {
   position: relative;
   margin-top: auto;
   margin-bottom: auto;
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   letter-spacing: 7px;
   font-size: 10px;
   color: #ffffff;
