--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -521,7 +521,7 @@ thead {
 }
 
 thead input {
-	width: 100%;
+	width: 100%;b   
 }
 
 th {
@@ -679,6 +679,7 @@ h2.aHeader-txt {
 
 .Banon {
 	float: left;
+	border-radius: 50%;
 }
 
 .Bbtn_post {
@@ -746,10 +747,9 @@ h2.aHeader-txt {
 /* Vote Status Percentage */
 
 .Bcon {
-	width: 60%;
+	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 10%;
 }
 
 .Bvotestat p {
@@ -769,11 +769,12 @@ h2.aHeader-txt {
 	width: 100%;
 	justify-content: space-around;
 	display: grid;
-	grid-column-gap: 20px;
-	grid-row-gap: 5%;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-	grid-template-rows: repeat(1, 250px);
-	/* z-index: -1000; */
+	grid-column-gap: 100px;
+	grid-row-gap: -5%;
+	grid-template-columns: repeat(auto-fit, minmax(100px, 4fr));
+	grid-template-rows: repeat(1, 300px);
+	margin-top: 4%;
+	z-index: -1000;
 }
 
 .Bvcontainer .Bcard {
@@ -798,113 +799,20 @@ h2.aHeader-txt {
 	pointer-events: none;
 }
 
-.Bpercent {
-	position: relative;
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
-	background: #ffc423;
-	z-index: 1000;
-}
-
-.Bpercent .Bnumber {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
-}
-
-.Bpercent .Bnumber h2 {
-	color: #003d55;
-	font-weight: 700;
-	margin-top: 55px;
-	font-size: 30px;
-	transition: 0.5s;
-	margin-left: 10px;
-}
-
 .Bbox a {
 	color: white;
 	font-family: Roboto;
 	font-size: 20px;
-	/* float: center; */
 	text-align: center;
-	/* margin-left: 24px; */
-	/* margin-top: 500px; */
+	padding: 10px;
+	background-color: black;
 }
 
-.Bbox a:hover {
-	color: #124254;
-	/* color: #ffc423; */
-}
-
-.Bcard:hover .Bpercent .Bnumber h2 {
-	color: #124254;
-	font-size: 40px;
-}
-
-.Bpercent .Bnumber h2 span {
-	font-size: 24px;
-	color: #777;
-	transition: 1s;
-}
-
-svg {
-	position: relative;
-	width: 150px;
-	height: 150px;
-	z-index: -1000;
-}
-
-svg circle {
-	width: 100%;
-	height: 100%;
-	fill: none;
-	stroke: #003d55;
-	stroke-width: 10;
-	stroke-linecap: round;
-	transform: translate(5px, 5px);
-}
-
-svg circle:nth-child(2) {
-	stroke-dasharray: 440;
-	stroke-dashoffset: 440;
-}
-
-.Bcard:nth-child(1) svg circle:nth-child(2) {
-	stroke-dashoffset: calc(440 - (440 * 90) / 100);
-	stroke: #ff9124;
-}
-
-.Bcard:nth-child(2) svg circle:nth-child(2) {
-	stroke-dashoffset: calc(440 - (440 * 85) / 100);
-	stroke: #ff9124;
-}
-
-.Bcard:nth-child(3) svg circle:nth-child(2) {
-	stroke-dashoffset: calc(440 - (440 * 25) / 100);
-	stroke: #ff9124;
-}
-
-.Bcard:nth-child(4) svg circle:nth-child(2) {
-	stroke-dashoffset: calc(440 - (440 * 37) / 100);
-	stroke: #ff9124;
-}
-
-.Bcard:nth-child(5) svg circle:nth-child(2) {
-	stroke-dashoffset: calc(440 - (440 * 100) / 100);
-	stroke: #ff9124;
-}
-
-.Bcard:nth-child(6) svg circle:nth-child(2) {
-	stroke-dashoffset: calc(440 - (440 * 45) / 100);
-	stroke: #ff9124;
-}
+.circle{
+	color: #ffc423;
+	font-size: 200%;
+	font-family: Roboto Regular;
+  }
 
 /*Vote Status per grade level*/
 
@@ -1170,7 +1078,7 @@ svg1 {
 	font-size: 300%;
 	letter-spacing: 4px;
 	text-align: center;
-	margin-top: 170px;
+	margin-top: 190px;
 }
 .Bon2 h1 {
 	font-family: Roboto regular;
