--- a/css/student_css/style_msgbox.css
+++ b/css/student_css/style_msgbox.css
@@ -70,7 +70,6 @@ nav ul {
 }
 
 nav ul li {
-  float: left;
   display: inline-block;
   height: 80px;
   background: #f8f8f8;
@@ -580,7 +579,7 @@ iframe {
   display: inline-block;
   padding: 0 0 0 10px;
   vertical-align: top;
-  width: 100%;
+  width: auto;
 }
 
 .received_withd_msg p {
@@ -591,7 +590,7 @@ iframe {
   font-size: 14px;
   margin: 0;
   padding: 5px 10px 5px 12px;
-  width: 100%;
+  width: auto;
 }
 
 .time_date {
@@ -603,7 +602,7 @@ iframe {
 }
 
 .received_withd_msg {
-  width: 70%;
+  width: auto;
 }
 
 .mesgs {
@@ -620,7 +619,7 @@ iframe {
   margin: 0;
   color: #3b444b;
   padding: 5px 10px 5px 12px;
-  width: 100%;
+  width: auto;
 }
 
 .outgoing_msg {
@@ -630,7 +629,7 @@ iframe {
 
 .sent_msg {
   float: right;
-  width: 70%;
+  width: auto;
   text-align: right;
   margin-right: 10px;
 }
