--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -521,7 +521,7 @@ thead {
 }
 
 thead input {
-	width: 100%;b   
+	width: 100%;
 }
 
 th {
@@ -770,7 +770,7 @@ h2.aHeader-txt {
 	justify-content: space-around;
 	display: grid;
 	grid-column-gap: 100px;
-	grid-row-gap: -5%;
+	grid-row-gap: 2%;
 	grid-template-columns: repeat(auto-fit, minmax(100px, 4fr));
 	grid-template-rows: repeat(1, 300px);
 	margin-top: 4%;
