--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -83,10 +83,90 @@ img.logos {
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 
-@media (max-width: 600px) {
+@media (max-width: 640px) { /*landscape galaxy s5*/
   body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 70px;
+    margin-top: -50px;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+}
+
+@media only screen and (device-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { /*ipad portrait*/
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    margin-top: 30px;
+    float: left;
+    margin-left: 70px;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 130px;
+    margin-top: -50px;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+}
+
+@media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {  /*ipad landscape*/
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    margin-top: 20px;
+    float: left;
+    margin-left: 160px;
+  }
+  #ADaside-container{
+    margin-top: -50px;
+    float: left;
+    margin-left: 160px;
+    max-width: 700px;
+  }
+  #AD-CD-headline{
+    font-weight: bold;
+  }
+  .ADcountdown {
+    font-size: auto;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+}
+
+@media only screen and (device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { /*ipad pro potrait*/
+  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    margin-top: 150px;
+    margin-left: 110px;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 110px;
+    max-width: 800px;
   }
   .ADcountdown {
     font-size: auto;
@@ -119,6 +199,7 @@ aside {
   font-size: 2.5em;
   color: black;
   margin-bottom: .8em;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 #AD-CD-contents {
