--- a/css/student_css/style_studDash.css
+++ b/css/student_css/style_studDash.css
@@ -1,5 +1,3 @@
-/* Static Page */
-
 * {
   margin: 0;
   padding: 0;
@@ -9,9 +7,8 @@
 }
 
 /* Body */
-
 body {
-  font-family: Roboto, Roboto Thin, Generica, sans-serif;
+  font-family: 'Roboto-regular', 'genericaregular', sans-serif;
   background-image: url("../../img/studentBG.png");
   background-size: cover;
   font-size: 100%;
@@ -20,286 +17,10 @@ body {
   min-height: 100%;
 }
 
-/* Top Navigation */
-
-/* nav{
-  background: #f8f8f8;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
-              0 3px 6px rgba(0, 0, 0, .23);
-  width: auto;
-  z-index: 3;
-}
-nav:before{
-  min-height: 100%;
-}
-nav:after{
-  content: '';
-  clear: both;
-  display: table;
-}
-nav h2{
-  margin-top: 3px;
-  font-family: Roboto Regular, sans-serif;
-  font-weight: inherit;
-  font-size: 180%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  color: #124254;
-}
-h2 a.Atext-link{
-  text-decoration: none;
-  color: #124254;
-}
-nav h3{
-  margin-top: 0px;
-  color: #124254;
-  padding-top: 5px;
-  font-weight: inherit;
-  font-size: 200%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  font-family: Generica regular, sans-serif;
-}
-h3 a.Atext-link{
-  text-decoration: none;
-  color: #124254;
-}
-nav .Alogo{
-  float: left;
-  position: relative;
-  line-height: 80px;
-  margin-top: 14px;
-  margin-left: 40px;
-}
-
-
-
-nav ul{
-  float: right;
-  padding: 0;
-  height: 80px;
-  margin-bottom: 0;
-  list-style: none;
-  position: relative;
-  text-align: center;
-  z-index: 4;
-}
-nav ul li{
-  float: left;
-  display: inline-block;
-  height: 80px;
-  background: #f8f8f8;
-  text-align: center;
-  width: 150px;
-}
-nav ul li a{
-  color: black;
-  line-height: 70px;
-  text-decoration: none;
-  font-size: 2em;
-  padding: 8px 15px;
-  letter-spacing: 1px;
-  font-family: Roboto Light, sans-serif;
-}
-nav ul li a:visited {
-  color: black;
-  text-decoration: none;
-}
-nav ul li a:hover{
-  color: black;
-  text-decoration: none;
-}
-nav ul li a:active{
-  text-decoration: none;
-}
-nav ul li:hover{
-  background-color: #fece4b;
-}
-nav ul li a:active {
-  color: green;
-}
-nav ul ul{
-  position: absolute;
-  top: 90px;
-  border-top: 3px solid #18566e;
-  opacity: 0;
-  visibility: hidden;
-  transition: top .3s;
-}
-nav ul ul li{
- height: 50px;
- position: relative;
- margin: 0px;
- float: none;
- display: list-item;
-}
-nav ul ul li a{
-  line-height: 50px;
-}
-nav ul ul li a.Aelec-text{
-  font-size: 1.2em;
-}
-nav ul ul li .logout::before {
-  content: "\f2f5";
-  font-family: "Font Awesome 5 Free";
-  padding: 0 10px 0 0;
-}
-nav ul ul li a:link{
-  color:rgb(0, 0, 0);
-}
-nav ul ul li a:visited {
-  color: white;
-  text-decoration: none;
-}
-nav ul ul li a:hover{
-  color: white;
-  box-shadow: none;
-  text-decoration: none;
-}
-nav ul ul li:hover{
-  background-color: #124254;
-  text-decoration: none;
-}
-nav ul ul li a:active{
-  color: #1b1b1b;
-  box-shadow: none;
-  text-decoration: none;
-}
-nav ul ul ul{
-  border-top: none;
-}
-nav ul ul ul li{
-  position: relative;
-  top: -60px;
-  left: 150px;
-}
-nav ul li:hover > ul{
-  top: 70px;
-  opacity: 1;
-  visibility: visible;
-}
-nav ul ul li{
-  background: #18566e;
-  position: relative;
-  margin: 0px;
-  width: 150px;
-  font-size: 0.8em;
-  float: none;
-  display: list-item;
-  border-bottom: 1px solid rgba(0,0,0,0.3);
-  z-index: 1;
-}
-nav ul ul li a{
-  color: black;
-  line-height: 50px;
-  font-family: Roboto bold, sans-serif;
-}
-nav ul ul ul li{
-  position: relative;
-  font-size: 1em;
-  top: -60px;
-  left: 150px;
-}
-.Ashow,.Aicon,input{
-  display: none;
-}
-nav img.Auser-profile{
-  margin-top: 0;
-  height: 40px;
-  width: 40px;
-} */
-
-/* .fa-plus{
-  font-size: 15px;
-  margin-left: 40px;
-} */
-
-/* Mobile */
-
-@media all and (max-width: 968px) {
-  nav ul {
-    margin-right: 0px;
-    margin-left: 0px;
-    float: left;
-  }
-  /* nav .logo{
-    padding-left: 30px;
-    width: auto;
-    float: left;
-  } */
-  .Ashow + a, 
-  ul {
-    display: none;
-  }
-  nav ul li, nav ul ul li {
-    border-top: 3px solid #18566e;
-    color: white;
-    display: block;
-    width: 100%;
-  }
-  nav ul li a:hover {
-    box-shadow: none;
-    color: white;
-  }
-  .Ashow {
-    display: block;
-    /* background-color: #18566e; */
-    color: white;
-    font-size: 1.2em;
-    padding: 0 20px;
-    line-height: 70px;
-    cursor: pointer;
-  }
-  .Ashow:hover {
-    color: white;
-  }
-  .Aicon {
-    display: block;
-    /* color:  black; */
-    position: absolute;
-    top: 0;
-    right: 40px;
-    line-height: 70px;
-    cursor: pointer;
-    font-size: 25px;
-  }
-  /* nav ul ul{
-    top: 70px;
-    border-top: 0px;
-    border-bottom: 0px;
-    float: none;
-    position: static;
-    display: none;
-    opacity: 1;
-    visibility: visible;
-  }
-  nav ul ul a{
-    left: 0;
-  } */
-  /* nav ul ul ul a{
-    padding-left: 80px;
-  }
-  nav ul ul ul li{
-    position: static;
-  } */
-  [id^=btn]:checked+ul {
-    width: 100%;
-    left: 0;
-    display: block;
-  }
-  nav ul ul li {
-    border-top: 0px;
-    border-bottom: 0px;
-  }
-  span.cancel:before {
-    content: '\f00d';
-  }
-}
 
 /* Left Content */
-
 article p {
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   color: #124254;
   font-weight: inherit;
   font-size: 20px;
@@ -308,7 +29,7 @@ article p {
 }
 
 article h1 {
-  font-family: Generica regular, sans-serif;
+  font-family: 'genericaregular', sans-serif;
   color: #18566e;
   font-weight: inherit;
   font-size: 55px;
@@ -318,24 +39,15 @@ article h1 {
 }
 
 /* Container for flexboxes */
-
 section {
   display: -webkit-flex;
   display: flex;
   margin-left: 30px;
   margin-top: 100px;
-  max-width: 800px;
   float: left;
 }
 
-#section-container {
-  min-height: 100%;
-  overflow: auto;
-  padding-bottom: 12%;
-}
-
 /* Style the content */
-
 article {
   -webkit-flex: 3;
   -ms-flex: 3;
@@ -344,7 +56,6 @@ article {
 }
 
 /*For logos on top of welcome banner*/
-
 img.Alogos {
   float: left;
   padding-left: 10px;
@@ -363,24 +74,14 @@ img.Alogos {
   max-width: 700px;
 }
 
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-
-@media (max-width: 600px) {
-  body, section, .Acontainer {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-}
-
 /*countdown*/
-
 aside {
   color: #333;
   float: left;
   text-align: center;
   margin-right: 70px;
   margin-left: 30px;
-  top: 100px;
+  top: 80px;
   padding-bottom: 50px;
   position: relative;
   max-width: 495px;
@@ -419,27 +120,104 @@ div li span {
 }
 
 aside p.Aelec-guide-txt {
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'genericaregular', sans-serif;
   text-align: justify;
   font-size: 1.3em;
   margin-top: 3em;
 }
 
-#aside-container {
-  min-height: 100%;
-  overflow: auto;
-  padding-bottom: 5%;
+
+
+
+/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+@media (max-width: 640px) { /*landscape galaxy s5*/
+  body, section, aside, #aside-container, #countdown, div ul {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  #countdown {
+    font-size: auto;
+  }
+  #ADaside-container{
+    float: left;
+    margin-left: 70px;
+    margin-top: -50px;
+  }
+  div ul {
+    display: block;
+    font-size: auto;
+  }
 }
 
-/* Footer */
+@media only screen and (device-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { /*ipad portrait*/
+  body, section, aside, #aside-container, #countdown, div ul {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    margin-top: 30px;
+    float: left;
+    margin-left: 70px;
+  }
+  #aside-container{
+    float: left;
+    margin-left: 130px;
+    margin-top: -50px;
+  }
+  #countdown {
+    font-size: auto;
+  }
+  div ul {
+    display: block;
+    font-size: auto;
+  }
+}
 
-/* footer{
-  background-color: #fece4b;
-  position: relative;
-  height: 5%;
-  margin-top: auto;
-  clear: both;
-  text-align: center;
-  padding: 5px 0px;
-  letter-spacing: 7px;
-} */
+@media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {  /*ipad landscape*/
+  body, section, aside, #aside-container, #countdown, div ul {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    margin-top: 20px;
+    float: left;
+    margin-left: 160px;
+  }
+  #aside-container{
+    margin-top: -50px;
+    float: left;
+    margin-left: 160px;
+    max-width: 700px;
+  }
+  div ul{
+    display: block;
+    font-size: auto;
+    font-weight: bold;
+  }
+  #countdown {
+    font-size: auto;
+  }
+}
+
+@media only screen and (device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { /*ipad pro potrait*/
+  body, section, aside, #aside-container, #countdown, div ul {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    margin-top: 150px;
+    margin-left: 110px;
+  }
+  #aside-container{
+    float: left;
+    margin-left: 110px;
+    max-width: 800px;
+  }
+  #countdown {
+    font-size: auto;
+  }
+  div ul {
+    display: block;
+    font-size: auto;
+  }
+}
