--- a/css/student_css/vote_ballot.css
+++ b/css/student_css/vote_ballot.css
@@ -1,7 +1,7 @@
 /* Voting Page */
 
 #F-header {
-  font-family: Generica regular, sans-serif;
+  font-family:'genericaregular', sans-serif;
   color: #124254;
   font-weight: inherit;
   font-size: 30px;
@@ -47,7 +47,7 @@
   color: #124254;
   padding: 5px 0;
   font-weight: 500;
-  font-family: 20px Roboto light sans-serif;
+  font-family: 20px 'Roboto-regular', sans-serif;
 }
 
 hr {
@@ -58,21 +58,21 @@ hr {
   font-size: 18px;
   color: #124254;
   font-weight: 900;
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 #F-GradeSection {
   font-size: 16px;
   color: #124254;
   font-weight: 500;
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 #F-Partylist {
   font-size: 16px;
   color: black;
   font-weight: 500;
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 img {
@@ -182,7 +182,7 @@ img.candidate-photo {
   width: 100%;
   text-indent: 10px;
   padding: 5px 0;
-  font: bold 20px Roboto Light, sans-serif;
+  font: bold 20px 'Roboto-regular', sans-serif;
   color: #124254;
 }
 
@@ -191,7 +191,7 @@ img.candidate-photo {
 }
 
 .vote-btn {
-  font: bold 16px Roboto Light, sans-serif;
+  font: bold 16px 'Roboto-regular', sans-serif;
   color: #eeeeee;
   letter-spacing: 3px;
   width: 200px;
@@ -251,7 +251,7 @@ img.candidate-photo {
   padding-top: 100px;
   /* Location of the box */
   left: 0;
-  top: 80px;
+  top: 60px;
   width: 100%;
   /* Full width */
   height: 100%;
@@ -379,7 +379,7 @@ img.candidate-photo {
 
 .F-confirmBTN {
   float: right;
-  font: bold Roboto Light, sans-serif;
+  font: bold 'Roboto-regular', sans-serif;
   color: #eeeeee;
   letter-spacing: 1px;
   background-color: #124254;
@@ -422,20 +422,20 @@ img.candidate-photo {
 }
 
 .F-show-votes {
-  font: Roboto Regular, sans-serif;
+  font: 'Roboto-regular', sans-serif;
   margin-top: 5px;
 }
 
 #F-preview-CandidateName {
   font-size: 16px;
   color: black;
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 #F-preview-Position {
   font-size: 16px;
   color: black;
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 /* Go to Home Button */
