--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -46,7 +46,18 @@
   padding: 0;
   border: 0;
 }
-  
+
+/*-----style for no scrollbar in all pages----*/
+/* html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+} */
+
 body{  
   font-size: 100%;
   margin: 0;
