--- a/css/admin_css/style_studAcc.css
+++ b/css/admin_css/style_studAcc.css
@@ -619,6 +619,11 @@ iframe {
     border-bottom: 2px solid #fece4b;
     padding: 10px 20px;
     margin: 30px 5px 15px 0px!important;
+    box-shadow: inset 0 0 2px 0 rgba(255,255,255,.4),
+    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
+    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
+    2px 2px 4px 0 rgba(0,0,0,.25) !important;
+    border-radius: 9px;
 }
 
 .btn-button5:hover,
